revert and allow all origins